* applied patches from the most recent FreiFunkFirmware (and fixed compile errors) according   to http://www.olsr.org/pipermail/olsr-dev/2006-December/254036.html:   - olsrd-libsmake.patch   - olsrd-dyngwplain.patch   - olsrd-txtinfo.patch   - olsrd-quagga.patch   - olsrd-quagga-routehandler.patch   - olsrd-optimize.patch   - olsrd-bmf-fixes.patch   - olsrd-fixes-sven-ola.patch   - olsrd-fixes-jhay-bsd.patch   - olsrd-fixes-backport.patch   - olsrd-fixes-routedel.patch   - olsrd-cpu-overload.patch   - olsrd-secure_key_path.patch   - olsrd-hna_ip_fix.patch   Not applied:   - olsrd-nameservice+services.patch: This patch produced too many rejects to fix easily.   - olsrd-fixes-eric.patch: This was not found on the webserver.   - olsrd-bmf.patch: We had already a "bmf" plug-in in there. * made the checksum type in the olsrd_secure plug-in "olsr_u8_t" (instead    of a wild "char *" and "unsigned char *" mix) everywhere. It killed    lots of warnings. * localized the checksum_cache array in olsrd_secure.c.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS = dot_draw dyn_gw httpinfo mini nameservice secure tas bmf
+SUBDIRS := $(shell find -maxdepth 1 -type d -not -name ".*" -not -name "CVS" -printf "%f\n")
 
 .PHONY: $(SUBDIRS)
 
