* bug fixes from Sven-Ola

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS := $(shell find -maxdepth 1 -type d -not -name ".*" -not -name "CVS" -printf "%f\n")
+SUBDIRS := $(shell find -maxdepth 2 -name Makefile -not -path ./Makefile -printf "%h\n")
 
 .PHONY: $(SUBDIRS)
 
