--- a/gui/win32/Shim/Shim.vcproj
+++ b/gui/win32/Shim/Shim.vcproj
@@ -63,7 +63,7 @@
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
-				EntryPointSymbol="EntryPoint"
+				EntryPointSymbol=""
 				TargetMachine="1"
 			/>
 			<Tool
@@ -139,7 +139,7 @@
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				EntryPointSymbol="EntryPoint"
+				EntryPointSymbol=""
 				TargetMachine="1"
 			/>
 			<Tool
