Commenting out -Werror since lex generates code that generates a warning using gcc 4.1.2(atleast on on ubuntu edgy) which prevents olsrd from building

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -27,7 +27,7 @@ CFLAGS +=	-Wmissing-declarations
 CFLAGS +=	-Wsign-compare
 CFLAGS +=	-O2
 CFLAGS +=	-g
-CFLAGS +=	-Werror
+#CFLAGS +=	-Werror
 endif
 
 ifdef OLSRD_PLUGIN
