--- a/src/cfgparser/Makefile
+++ b/src/cfgparser/Makefile
@@ -36,7 +36,7 @@
 # to the project. For more information see the website or contact
 # the copyright holders.
 #
-# $Id: Makefile,v 1.22 2007/03/27 03:05:21 tlopatic Exp $
+# $Id: Makefile,v 1.23 2007/04/20 13:46:05 bernd67 Exp $
 
 TOPDIR=../..
 include $(TOPDIR)/Makefile.inc
@@ -89,11 +89,20 @@ default_target: $(NAME)
 $(NAME):	$(OBJS)
 		$(CC) $(LDFLAGS) -o $(NAME) $(OBJS) $(LIBS)
 
-oscan.c:	oscan.lex
-		$(FLEX) -ooscan.c oscan.lex
+oscan.c:	oscan.lex Makefile
+		$(FLEX) -Cem -ooscan.c oscan.lex
+		mv oscan.c oscan.c-tmp && \
+			sed	-e '/^static/s/yy_get_next_buffer[\(][\)]/yy_get_next_buffer(void)/' \
+				-e '/^static/s/yy_get_previous_state[\(][\)]/yy_get_previous_state(void)/' \
+				-e '/^static/s/input[\(][\)]/input(void)/' \
+				-e '/^static  *void  *yy_fatal_error/s/^\(.*)\)\();\)$$/\1 __attribute__((noreturn)) \2/' \
+				< oscan.c-tmp >oscan.c
+		$(RM) oscan.c-tmp
 
-oparse.c:	oparse.y olsrd_conf.h
-		$(BISON) -d -ooparse.c oparse.y
+oparse.c:	oparse.y olsrd_conf.h Makefile
+		$(BISON) -d -o oparse.c oparse.y
+
+#oscan.o oparse.o:: CFLAGS := $(filter-out -Wunreachable-code, $(CFLAGS))
 
 .PHONY: install clean uberclean
 
@@ -105,6 +114,7 @@ clean:
 		rm -f *.[od~]
 		rm -f $(LIBNAME)
 		rm -f $(BINNAME)
+		$(RM) oparse.c-tmp
 
 uberclean:	clean
 		rm -f oparse.c oparse.h oscan.c
