* fixed up wrong reg-exp

--- a/src/cfgparser/Makefile
+++ b/src/cfgparser/Makefile
@@ -36,7 +36,7 @@
 # to the project. For more information see the website or contact
 # the copyright holders.
 #
-# $Id: Makefile,v 1.24 2007/04/25 22:08:17 bernd67 Exp $
+# $Id: Makefile,v 1.25 2007/04/27 11:32:27 bernd67 Exp $
 
 TOPDIR=../..
 include $(TOPDIR)/Makefile.inc
@@ -94,7 +94,7 @@ oscan.c:	oscan.lex Makefile
 		sed	-e '/^static/s/yy_get_next_buffer[\(][\)]/yy_get_next_buffer(void)/' \
 			-e '/^static/s/yy_get_previous_state[\(][\)]/yy_get_previous_state(void)/' \
 			-e '/^static/s/input[\(][\)]/input(void)/' \
-			-e '/^static  *void  *yy_fatal_error/s/^\(.*)\)\();\)$$/\1 __attribute__((noreturn)) \2/' \
+			-e '/^static  *void  *yy_fatal_error/s/^\(.*)\);$$/\1 __attribute__((noreturn));/' \
 			< oscan.c-tmp >oscan.c
 		$(RM) oscan.c-tmp
 
