(1) On Windows $(OS) is not undefined but contains "Windows_NT". Now handled in Makefile.inc instead of guess_os.sh. (2) Fixed re-definition of write() in Windows version of unistd.h.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -70,6 +70,9 @@ HDRS +=		$(wildcard *.h)
 all: default_target
 
 # OS detection
+ifeq ($(OS),Windows_NT)
+OS = win32
+endif
 ifeq ($(OS),)
 OS :=		$(shell sh $(TOPDIR)/make/guess_os.sh)
 endif
