--- a/lib/httpinfo/Makefile
+++ b/lib/httpinfo/Makefile
@@ -35,7 +35,7 @@
 # to the project. For more information see the website or contact
 # the copyright holders.
 #
-# $Id: Makefile,v 1.21 2005/05/25 13:50:22 br1 Exp $
+# $Id: Makefile,v 1.22 2007/07/15 21:50:45 bernd67 Exp $
 
 OLSRD_PLUGIN =	true
 PLUGIN_NAME =	olsrd_httpinfo
@@ -55,7 +55,7 @@ ifdef ADMIN_INTERFACE
 		@echo 'WARNING - BUILT WITH EXPERIMENTAL ADMIN INTERFACE!'
 endif
 
-$(PLUGIN_FULLNAME): $(OBJS)
+$(PLUGIN_FULLNAME): $(OBJS) version-script.txt
 		$(CC) $(LDFLAGS) -o $(PLUGIN_FULLNAME) $(OBJS) $(LIBS)
 
 install:	$(PLUGIN_FULLNAME)
