--- a/make/Makefile.linux
+++ b/make/Makefile.linux
@@ -6,11 +6,11 @@ ARCH := $(shell uname -m)
 DESTDIR ?=
 LIBDIR =	$(DESTDIR)$(shell if [ "$(ARCH)" = "x86_64" -a -d "/usr/lib64" ]; then echo "/usr/lib64"; else echo "/usr/lib"; fi)
 
-SRCS += 	$(wildcard src/linux/*.c) $(wildcard src/unix/*.c)
-HDRS +=		$(wildcard src/linux/*.h) $(wildcard src/unix/*.h)
+SRCS += 	$(wildcard src/linux/*.c src/unix/*.c)
+HDRS +=		$(wildcard src/linux/*.h src/unix/*.h)
 
-DEFINES = 	-Dlinux
-LIBS =		
+CPPFLAGS += 	-Dlinux
+LIBS +=		
 
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
 INSTALL_LIB =	install -D -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
