--- a/src/cfgparser/Makefile
+++ b/src/cfgparser/Makefile
@@ -36,7 +36,7 @@
 # to the project. For more information see the website or contact
 # the copyright holders.
 #
-# $Id: Makefile,v 1.27 2007/07/26 17:34:54 bernd67 Exp $
+# $Id: Makefile,v 1.28 2007/08/02 11:56:53 bernd67 Exp $
 
 TOPDIR=../..
 include $(TOPDIR)/Makefile.inc
@@ -55,7 +55,7 @@ else
 
 LIBNAME ?=	olsrd_cfgparser.so.0.1
 BINNAME ?=	olsrd_cfgparser
-
+CFLAGS += -fPIC
 endif
 
 
@@ -71,7 +71,7 @@ else
 ifeq (${OS}, osx)
 LDFLAGS +=	-dynamiclib -single_module
 else
-LDFLAGS +=	-shared -Wl,-soname,$(LIBNAME)
+LDFLAGS +=	-fPIC -shared -Wl,-soname,$(LIBNAME)
 endif
 
 ifeq (${OS}, win32)
