--- a/make/Makefile.linux
+++ b/make/Makefile.linux
@@ -19,10 +19,7 @@ INSTALL_LIB =	install -D -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME);
 ifdef OLSRD_PLUGIN
 GENERATE_PIC = true
 endif
-ifeq ($(ARCH),x86_64)
-GENERATE_PIC = true
-endif
-ifeq ($(ARCH),alpha)
+ifeq ($(filter-out alpha x86_64 parisc64, $(ARCH)),)
 GENERATE_PIC = true
 endif
 
