- Based on a patch by Gianni Costanzi <gianni.costanzi@gmail.com> (so credits   and thanks have to go there):   added OS_CFLAG_PTHREAD Makefile variable since gcc (on Linux) requests this   in the manual page.   Changes/additions:   - I added definitions to all OS-specific Makefile.$OS with the value similar     to the value in OS_LIB_PTHREAD (either empty or "-pthread").   - The variable is added to CPPFLAGS (and not CFLAGS) since CPPFLAGS is used     for all cpp and gcc calls (and gcc's man page indicates that it sets     variables for both of them).
This has not been compiled or tested on anything except Linux up to now (and
to the best of my knowledge). So if you are a *BSD, Windows/CygWin or MacOSX
guru and there is something wrong, please send a patch.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -21,7 +21,7 @@ EXENAME ?= olsrd
 CFGNAME ?= $(EXENAME).conf
 CFGFILE ?= $(ETCDIR)/$(CFGNAME)
 
-CPPFLAGS =	-Isrc -I$(TOPDIR)/src 
+CPPFLAGS =	-Isrc -I$(TOPDIR)/src
 
 # add gcc warnings and optimizations if CFLAGS not set
 ifndef CFLAGS
@@ -49,7 +49,11 @@ WARNINGS :=	$(shell CC="$(CC)" $(TOPDIR)/gcc-warnings $(WARNINGS))
 endif
 CFLAGS +=	$(WARNINGS)
 CFLAGS +=	-O2
-CFLAGS +=	-g
+#CFLAGS +=	-g
+CFLAGS +=	$(EXTRA_CFLAGS)
+
+# Must be specified along with -lpthread on linux
+CPPFLAGS +=	$(OS_CFLAG_PTHREAD)
 endif
 
 ifdef OLSRD_PLUGIN
