--- a/make/Makefile.fbsd
+++ b/make/Makefile.fbsd
@@ -37,6 +37,7 @@ INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
 		/sbin/ldconfig
 
 OS_LIB_PTHREAD = -pthread
+OS_CFLAG_PTHREAD = -pthread
 OS_LIB_DYNLOAD =
 
 # Local Variables:
