* s/-lpthread/$(OS_LIB_PTHREAD)/

--- a/lib/bmf/Makefile
+++ b/lib/bmf/Makefile
@@ -39,7 +39,7 @@ PLUGIN_VER =	1.5
 TOPDIR = ../..
 include $(TOPDIR)/Makefile.inc
 
-LIBS +=	-lpthread
+LIBS +=	$(OS_LIB_PTHREAD)
 
 ifneq ($(OS),linux)
 
