--- a/src/olsr_switch/Makefile
+++ b/src/olsr_switch/Makefile
@@ -9,7 +9,7 @@ BINNAME = olsr_switch
 endif
 
 default_target:	$(OBJS)
-	$(CC) $(LDFLAGS) -o $(TOPDIR)/$(BINNAME) $(OBJS) $(LIBS) $(OS_LIB_PTHREAD)
+	$(CC) $(LDFLAGS) -o $(TOPDIR)/$(BINNAME) $(OBJS) $(LIBS)
 
 ohs_cmd.o: CFLAGS += -Wno-cast-qual
 
