- Replaced "which" with a /bin/sh script snippet. - inspired by Sven-Ola Tuecke: avoid a bash'ism (i.e. "OPTS="${OPTS//$opt}") in   gcc-warnings and ld-warnings. But we do not replace it with `sed` (since it   costs a fork(2) and an exec(3)) but also with shell code which doesn't use   any external program.
For a specification of /bin/sh: see
http://www.opengroup.org/onlinepubs/000095399/utilities/xcu_chap02.html#tag_02

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -2,7 +2,7 @@
 #
 # Highlevel configuration options for all
 #
-# $Id: Makefile.inc,v 1.48 2007/12/06 20:13:56 bernd67 Exp $
+# $Id: Makefile.inc,v 1.49 2007/12/11 17:16:03 bernd67 Exp $
 #
 
 # activate debugging with 1 or deactivate with 0
@@ -25,7 +25,7 @@ MUDFLAP ?= 0
 #
 
 # programs
-CCACHE ?=       $(shell which ccache 2> /dev/null)
+CCACHE ?=       $(shell IFS=:; for i in $$PATH;do test -x "$$i/ccache" && echo "$$i/ccache" && break; done)
 ifeq ($(origin CC),default)
 CC = 		$(CCACHE) gcc
 else
@@ -91,11 +91,11 @@ endif
 #WARNINGS +=	-Wunreachable-code
 WARNINGS +=	-Winline
 WARNINGS +=	-Wdisabled-optimization
-#WARNINGS +=	-Werror
+#nnnWARNINGS +=	-Werror
 WARNINGS +=	-finline-functions-called-once
 WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
-WARNINGS +=	-fomit-framepointers
+WARNINGS +=	-fomit-frame-pointer
 endif
 # we have small inline functions in src/lq_route.c which should always be inlined
 WARNINGS +=	-finline-limit=50
@@ -123,7 +123,8 @@ endif
 ifdef OLSRD_PLUGIN
 # c and ld flags for libraries (plugins)
 CPPFLAGS +=	-DOLSR_PLUGIN
-LDFLAGS +=	-shared -Wl,-soname,$(PLUGIN_NAME)
+LDFLAGS +=	-shared
+LDFLAGS +=	-Wl,-soname,$(PLUGIN_NAME)
 LDFLAGS +=	-Wl,--version-script=version-script.txt 
 else
 # c and ld flags for main
