--- a/.hgignore
+++ b/.hgignore
@@ -1,5 +1,6 @@
 syntax: glob
 *.o
+*.a
 *.d
 *.diff
 *.~
@@ -9,3 +10,17 @@ src/cfgparser/oparse.c
 src/cfgparser/oparse.h
 src/cfgparser/oscan.c
 lib/*/*so.*.*
+*.obj
+*.lib
+*.dll
+olsrd.exe
+olsr-setup.exe
+*.opt
+*.ncb
+*.aps
+*.sbr
+*.plg
+gui/win32/Main/Debug/
+gui/win32/Main/Release/
+gui/win32/Shim/Debug/
+gui/win32/Shim/Release/
