--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,11 @@
 ifeq ($(OS),linux)
 SUBDIRS := $(shell find -maxdepth 2 -name Makefile -not -path ./Makefile -printf "%h\n")
 else
+ifeq ($(OS),win32)
+SUBDIRS := bmf dot_draw httpinfo mini pgraph secure txtinfo
+else
 SUBDIRS := bmf dot_draw dyn_gw dyn_gw_plain httpinfo mini nameservice pgraph secure txtinfo
+endif
 endif
 
 .PHONY: $(SUBDIRS)
