Modified build file for windows/BSD

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,9 +3,9 @@ ifeq ($(OS),linux)
 SUBDIRS := $(shell find -maxdepth 2 -name Makefile -not -path ./Makefile -printf "%h\n")
 else
 ifeq ($(OS),win32)
-SUBDIRS := bmf dot_draw httpinfo mini pgraph secure txtinfo lq_etx_fpm
+SUBDIRS := bmf dot_draw httpinfo mini pgraph secure txtinfo
 else
-SUBDIRS := bmf dot_draw dyn_gw dyn_gw_plain httpinfo mini nameservice pgraph secure txtinfo lq_etx_fpm
+SUBDIRS := bmf dot_draw dyn_gw dyn_gw_plain httpinfo mini nameservice pgraph secure txtinfo
 endif
 endif
 
