--- a/gui/win32/Main/Frontend.rc
+++ b/gui/win32/Main/Frontend.rc
@@ -68,7 +68,7 @@ IDD_FRONTEND_DIALOG DIALOGEX 0, 0, 399, 289
 STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
     WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "olsr.org Switch 0.5.0"
+CAPTION "olsr.org Switch 0.5.6-rc5"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",0x0,7,7,383,256
@@ -89,7 +89,7 @@ BEGIN
     PUSHBUTTON      "Clear",IDC_BUTTON1,320,7,50,14
 END
 
-IDD_DIALOG2 DIALOGEX 0, 0, 377, 240
+IDD_DIALOG2 DIALOG DISCARDABLE  0, 0, 377, 240
 STYLE WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -125,7 +125,8 @@ BEGIN
     CONTROL         "for MPR selection and routing",IDC_RADIO2,"Button",
                     BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,132,187,109,
                     10
-    EDITTEXT        IDC_EDIT14,305,169,26,12,ES_RIGHT | ES_NUMBER
+    EDITTEXT        IDC_EDIT14,305,169,26,12,ES_RIGHT | ES_NUMBER | 
+                    WS_DISABLED
     PUSHBUTTON      "Open",IDC_BUTTON4,210,219,50,14
     PUSHBUTTON      "Save",IDC_BUTTON5,265,219,50,14
     PUSHBUTTON      "Reset",IDC_BUTTON1,320,219,50,14
