added "-funit-at-a-time" to the gcc options. Newer gccs (e.g. 4.3.0 on Fedora 9) need it for "-finline-functions-called-once"

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -92,6 +92,7 @@ WARNINGS +=	-Winline
 WARNINGS +=	-Wdisabled-optimization
 #WARNINGS +=	-Werror
 WARNINGS +=	-finline-functions-called-once
+WARNINGS +=	-funit-at-a-time
 WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
 WARNINGS +=	-fomit-frame-pointer
